# multimodel-market-warning-system

./: README.md  pyproject.toml
config/: registry_config.example.yaml
docs/: ARCHITECTURE.md
scripts/: run_daily.py  run_walkforward.py
src/ews/aggregation/: meta_model.py
src/ews/optimization/: walkforward.py
src/ews/orchestration/: daily_pipeline.py
src/ews/registry/: schema.py
src/ews/signals/: base.py  lppls.py  mfdfa.py  wavelet.py
tests/: test_orchestration.py  test_registry.py  test_walkforward.py
