[project]
name = "ews"
version = "0.1.0"
description = "Multi-model, multi-market early warning system for market downturns/crashes"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "pydantic>=2",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
